fix(auth-service): update unit and integration tests to replace EmailService with RabbitTemplate mock